--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "postbuild": "next-on-netlify"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^12.0.10",
     "next-on-netlify": "^2.6.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "buffer-loader": "^0.1.0"
