--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "next": "^12.0.10",
-    "next-on-netlify": "^2.6.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.5",
     "buffer-loader": "^0.1.0"
   }
 }
