--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "next-on-netlify-demo",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "postbuild": "next-on-netlify"
+    "build": "next build"
   },
   "dependencies": {
     "next": "^12.0.10",
